@startuml

title __SECURITY's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace auth {
      namespace security {
        class com.vale.warehouses.auth.security.AuthenticationFilter {
            + AuthenticationFilter()
            + attemptAuthentication()
            # successfulAuthentication()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace auth {
      namespace security {
        class com.vale.warehouses.auth.security.AuthenticationProvider {
            # additionalAuthenticationChecks()
            # retrieveUser()
        }
      }
    }
  }
  

  com.vale.warehouses.auth.security.AuthenticationFilter -up-|> org.springframework.security.web.authentication.AbstractAuthenticationProcessingFilter
  com.vale.warehouses.auth.security.AuthenticationFilter o-- com.vale.warehouses.auth.service.interfaces.AuthServiceInterface : authService
  com.vale.warehouses.auth.security.AuthenticationFilter o-- com.vale.warehouses.auth.service.UserDetailsServiceImpl : userDetailsService
  com.vale.warehouses.auth.security.AuthenticationProvider -up-|> org.springframework.security.authentication.dao.AbstractUserDetailsAuthenticationProvider
  com.vale.warehouses.auth.security.AuthenticationProvider o-- com.vale.warehouses.auth.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
